<resources>
    <string name="app_name">MiniSci</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- splash -->
    <string name="splash_title">Asmaa Mirkhan</string>
    <string name="splash_text">Made with ♥ by Asmaa Mirkhan 🦋</string>

    <!-- main -->
    <string name="signin_text">Lets start %s!</string>
    <string name="signup_text">Sign up now!</string>

    <!-- login analyzer -->
    <string name="login_analyzer">I am looking for %s! 🕵️‍♀️</string>

    <!-- registration dialog -->
    <string name="register_title">Welcome! 🎉</string>
    <string name="register_get_name">Your name</string>

    <!-- dahsboard -->
    <string name="solve_quiz">Solve a quiz! 👩‍🏫</string>
    <string name="explore">Explore! 🕵️‍♀️</string>
    <string name="quote_day">Quote of the day 🌸️</string>
    <string name="info_day">Did you know?️🤔</string>
    <string name="lets_learn">Let\'s learn new things 👩‍🎓</string>
    <string name="what_to_do">What do you want to do?</string>
    <string name="welcome_user">Nice to see you again %s! 🎉</string>
    <string name="emotion_result">You seem %s today! let\'s have some fun together 🤩</string>
    <string name="happy">HAPPY 🎉</string>
    <string name="sad">LOW MOTIVATED 🥰</string>
    <string name="drowsy">DROWSY 😴</string>
    <string name="continue_word">Continue</string>

    <!-- explore -->
    <string name="lets_explore">Let\'s explore objects arround us 🕵️‍♀️</string>

    <!-- translate -->
    <string name="lets_translate">Now you know 2 languages 🤩️</string>

    <!-- Menu -->
    <string name="menu_explore">Explore</string>
    <string name="menu_solve">Solve Quiz</string>
    <string name="menu_quick_info">Quick Info</string>
    <string name="menu_quick_quote">Quick Quote</string>
    <string name="menu_learn_translate">Learn language</string>
    <string name="next">Next</string>

    <!-- quiz -->
    <string name="select">Select</string>

</resources>