<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_baseline_auto_awesome_24"
            android:title="@string/menu_explore" />
        <item
            android:id="@+id/nav_translate"
            android:icon="@drawable/ic_baseline_language_24"
            android:title="@string/menu_learn_translate" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_baseline_school_24"
            android:title="@string/menu_solve" />
        <item
            android:id="@+id/nav_quick_info"
            android:icon="@drawable/ic_baseline_auto_stories_24"
            android:title="@string/menu_quick_info" />
        <item
            android:id="@+id/nav_get_quote"
            android:icon="@drawable/ic_baseline_favorite_border_24"
            android:title="@string/menu_quick_quote" />
    </group>
</menu>